imagefreeze: flaky unit test test_imagefreeze_eos
test_imagefreeze_eos
occasionally fails on the CI when run in valgrind:
Running suite(s): imagefreeze
0:00:02.616036850 5621 0x548a5d0 ERROR imagefreeze gstimagefreeze.c:290:gst_image_freeze_sink_setcaps:<freeze:sink> No usable caps found
Unexpected critical/warning: _gst_util_uint64_scale: assertion 'denom != 0' failed
Stack trace:
gst_debug_get_stack_trace (gstinfo.c:3021)
gst_check_log_critical_func (gstcheck.c:281)
g_logv (gmessages.c:1350)
g_log (gmessages.c:1413)
_gst_util_uint64_scale (gstutils.c:617)
gst_image_freeze_src_loop (gstimagefreeze.c:859)
gst_task_func (gsttask.c:328)
g_thread_pool_thread_proxy (gthreadpool.c:308)
g_thread_proxy (gthread.c:805)
start_thread (pthread_create.c:479)
__clone (clone.S:93)
0%: Checks: 1, Failures: 1, Errors: 0
../subprojects/gstreamer/libs/gst/check/gstcheck.c:286:F:linear:test_imagefreeze_eos:0: Unexpected critical/warning: _gst_util_uint64_scale: assertion 'denom != 0' failed
Check suite imagefreeze ran in 2.689s (tests failed: 1)